--- a/src/app/components/teams/teams.component.html
+++ b/src/app/components/teams/teams.component.html
@@ -5,7 +5,7 @@
         <mat-icon *ngIf="aAuth" class="add" aria-hidden="false" aria-label="Example add icon" [routerLink]="['../add-team']">add</mat-icon>
     </div>
 
-    <div style="display: flex;">
+    <div class="desktop">
         <div>
             <div class="participants__cell" *ngFor="let team of teams?.results" (click)="getTeam(team)">
                 <img *ngIf="team.photo_small" src="{{team.photo_small}}" alt="avatar" class="participants__avatar">
@@ -21,6 +21,15 @@
                 <p class="participants__name">{{player.user.full_name}}</p> 
                 <p class="participants__count">{{player.number}}</p>
             </div>
+        </div>
+    </div>
+
+    <div class="mobile">
+        <div class="participants__cell" *ngFor="let team of teams?.results" [routerLink]="['../team', team.id]">
+            <img *ngIf="team.photo_small" src="{{team.photo_small}}" alt="avatar" class="participants__avatar">
+            <div *ngIf="!team.photo_small" class="participants__avatar"></div>
+            <p class="participants__name">{{team.full_name}}</p> 
+            <p class="participants__count">{{team.players_count}}</p>
         </div>
     </div>
 </div>
