--- a/src/app/components/user/user.component.html
+++ b/src/app/components/user/user.component.html
@@ -5,7 +5,7 @@
     </div>
     <div class="flex">
         <img class="avatar" [src]="avatar"/>
-        <div style="width: 400px;">
+        <div>
             <p class="text">Имя: <span>{{mydata.first_name}}</span></p>
             <p class="text">Фамилия: <span>{{mydata.last_name}}</span></p>
             <p class="text">Ник: <span>{{mydata.username}}</span></p>
