--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -65,7 +65,7 @@ ng-sidebar-container {
     display: none;
 	width: 30px;
     height: 30px;
-    top: 30px;
+    top: 20px;
     right: 30px;
     position: fixed;
     outline: none;
@@ -78,7 +78,7 @@ ng-sidebar-container {
     top: 15px;
     width: 30px;
     height: 5px;
-    background-color: $blue;
+    background-color: $lightdark;
     border-radius: 25%;
     opacity: 100;
     transform: translateX(0);
@@ -90,7 +90,7 @@ ng-sidebar-container {
     top: 15px;
     width: 30px;
     height: 5px;
-    background-color: $blue;
+    background-color: $lightdark;
     border-radius: 25%;
     opacity: 0;
     transform: translateX(40px);
@@ -102,7 +102,7 @@ ng-sidebar-container {
     top: 15px;
     width: 30px;
     height: 5px;
-    background-color: $blue;
+    background-color: $lightdark;
     border-radius: 25%;
     opacity: 100;
     transform: translateX(0);
@@ -114,7 +114,7 @@ ng-sidebar-container {
     top: 15px;
     width: 30px;
     height: 5px;
-    background-color: $blue;
+    background-color: $lightdark;
     border-radius: 25%;
     opacity: 0;
     transform: translateX(-40px);
@@ -177,6 +177,7 @@ ng-sidebar-container {
     padding: 10px;
     background: $blue;
     z-index: 100;
+    height: 58px;
 }
 .link {
     font-weight: bold;
@@ -191,14 +192,13 @@ ng-sidebar-container {
     color: $dark;
 }
 .box {
-    width: 350px;
     display: flex;
     justify-content: flex-end;
     align-items: center;
 }
 .version {
     font-size: 14px;
-    color: $blue;
+    color: $light;
     margin-right: 10px;
     user-select: none;
 }
@@ -229,4 +229,28 @@ ng-sidebar-container {
 .content {
     height: 100%;
     overflow: auto;
+}
+@media(max-width: 1100px){
+    .version {
+        display: none;
+    }
+}
+@media(max-width: 960px){
+    .phone {
+        display: none;
+    }
+}
+@media(max-width: 850px){
+    .link {
+        display: none;
+    }
+    .burger {
+        display: block;
+    }
+    .avatar {
+        display: none;
+    }
+    .logout {
+        display: none;
+    }
 }
