--- a/src/app/components/login/login.component.scss
+++ b/src/app/components/login/login.component.scss
@@ -1,8 +1,14 @@
 .container {
     width: 280px;
     height: 360px;
-    padding: 70px 30px 0;
     margin: 100px auto 0 auto;
+}
+.title {
+    font-size: 48px;
+    font-weight: bold;
+    text-align: center;
+    padding-bottom: 20px;
+    user-select: none;
 }
 .box {
     display: flex;
