--- a/src/app/components/register-profile/register-profile.component.html
+++ b/src/app/components/register-profile/register-profile.component.html
@@ -3,7 +3,7 @@
     <div class="flex">
         <div style="margin: 0 10px;">
             <img [src]="croppedImage" alt="" class="avatar">
-            <button mat-raised-button (click)="openDialog()" type="button" style="width: 250px;" color="primary">Установить аватарку</button>
+            <button mat-raised-button (click)="openDialog()" type="button" style="width: 250px; margin-bottom: 10px;" color="primary">Установить аватарку</button>
         </div>
         <div style="margin: 0 10px;">
         
