--- a/src/styles.scss
+++ b/src/styles.scss
@@ -49,6 +49,23 @@ h1 {
     user-select: none;
 }
 .container {
-    width: 1200px;
+    max-width: 1200px;
     margin: 50px auto 0 auto;
+    padding: 0 10px;
+}
+@media(max-width: 768px){
+    h1 {
+        font-size: 36px;
+    }
+    .container {
+        margin: 30px auto 10px auto;
+    }
+}
+@media(max-width: 360px){
+    h1 {
+        font-size: 24px;
+    }
+    .container {
+        margin: 10px auto;
+    }
 }
