moved add-event in popup & create location.component

--- a/src/app/components/events/events.component.html
+++ b/src/app/components/events/events.component.html
@@ -30,7 +30,7 @@
                     [geometry]="[location.lat, location.lon]" 
                     [properties]="{hintContent : location.name}"
                     [options]="{iconColor: 'gold'}"
-                    (yaclick)="filterLocation(location.id)"
+                    (yaclick)="openDialog(location.id)"
                 ></ya-placemark>
             </ya-map>
         </div>
