--- a/src/app/components/add-event/add-event.component.html
+++ b/src/app/components/add-event/add-event.component.html
@@ -1,17 +1,4 @@
-<div class="container">
-    <h1>Добавить событие</h1>
-
-    <div class="box">
-        <div class="map">
-            <ya-map [center]="[45.05, 41.95]" [zoom]="12" (yaclick)="onMapClick($event)" [state]="{ controls: ['smallMapDefaultSet'] }">
-                <ya-placemark *ngFor="let location of locations?.results" 
-                    [geometry]="[location.lat, location.lon]" 
-                    [properties]="{hintContent : location.name}"
-                    [options]="{iconColor: 'gold'}"
-                ></ya-placemark>
-            </ya-map>
-        </div>
-        <div>
+<mat-dialog-content class="mat-typography">
             <form [formGroup]="addEventForm" novalidate (ngSubmit)="sendService()">
                 <div class="flex">
                     <mat-form-field appearance="fill" style="width: 280px;">
@@ -67,7 +54,7 @@
                     <button mat-raised-button style="width: 280px;" color="primary" [disabled]="addEventForm.invalid">Добавить событие</button>
                 </div>
             </form>
-        </div>
-    </div>
-    <button mat-raised-button color="primary" style="margin-top: 10px;" *ngIf="isLocation" (click)="saveLocation()">Сохранить локацию</button>
-</div>
+</mat-dialog-content>
+<mat-dialog-actions align="end">
+  <button mat-raised-button mat-dialog-close>Закрыть</button>
+</mat-dialog-actions>
