--- a/src/app/components/events/events.component.scss
+++ b/src/app/components/events/events.component.scss
@@ -58,6 +58,11 @@ $blue: #2196F3;
     justify-content: center;
     align-items: center;
 }
+.btn {
+    display: block;
+    width: 200px;
+    margin-bottom: 10px;
+}
 @media(max-width: 1220px){
     .map {width: 800px;}
 }
