--- a/src/app/components/events/events.component.scss
+++ b/src/app/components/events/events.component.scss
@@ -38,7 +38,7 @@ $blue: #2196F3;
     border-radius: 5px;
     background: $blue;
     width: 280px;
-    min-height: 110px;
+    min-height: 90px;
     padding: 10px;
     cursor: pointer;
 }
@@ -62,6 +62,12 @@ $blue: #2196F3;
     display: block;
     width: 200px;
     margin-bottom: 10px;
+}
+.point {
+    width: 12px;
+    height: 12px;
+    border-radius: 50%;
+    border: 1px solid $light;
 }
 @media(max-width: 1220px){
     .map {width: 800px;}
