--- a/src/app/components/main/main.component.scss
+++ b/src/app/components/main/main.component.scss
@@ -19,7 +19,7 @@ $blue: #2196F3;
     margin-bottom: 10px;
 }
 .box__events {
-    max-height: 660px;
+    height: 660px;
     overflow: auto;
 }
 .box__events::-webkit-scrollbar {
